--- a/wa.user.styl
+++ b/wa.user.styl
@@ -814,21 +814,21 @@ ac5 = var(--ac-5)
 
                 /// Announcements.
                 &::before {
-                    display: block;
-                    font-size: 16px;
-                    margin-bottom: -16px;
-                    white-space: pre-wrap;
-                    content: var(--message) var(--changes);
+                    display: block
+                    font-size: 16px
+                    margin-bottom: -16px
+                    white-space: pre-wrap
+                    content: var(--message) var(--changes)
                 }
 
                 /// Version.
                 &::after {
-                    display: block;
-                    font-size: 16px;
-                    margin-top: 16px;
-                    padding-top: 24px;
-                    margin-bottom: -16px;
-                    content: var(--version);
+                    display: block
+                    font-size: 16px
+                    margin-top: 16px
+                    padding-top: 24px
+                    margin-bottom: -16px
+                    content: var(--version)
                     border-top: 1px solid bg4 i
                 }
             }
@@ -836,7 +836,7 @@ ac5 = var(--ac-5)
 
         /// Settings -> Tweaks for 'Set Chat Wallpaper' area. #149
         /[style *= 'd-color: rgb(237\, 233\, 228)'] {
-            position: relative;
+            position: relative
             &::before {
                 content: 'Use this with Dark-WhatsApp'
                 position: absolute
@@ -936,7 +936,7 @@ ac5 = var(--ac-5)
 
         /// Status area modal.
         /[data-animate-status-v3-modal-background = 'true'] {
-            c: 0 0 var(--modal-backdrop);
+            c: 0 0 var(--modal-backdrop)
             /// Main content.
             > div {
                 c: 0 0 bg1
@@ -1009,7 +1009,7 @@ ac5 = var(--ac-5)
             path[fill ^= '#FFF'] { fill: ac0 }
             path[fill ^= '#00E'] { fill: bg1 }
             div {
-                text-transform: unset;
+                text-transform: unset
                 c: fg1
             }
 
@@ -1090,7 +1090,7 @@ ac5 = var(--ac-5)
             } else if ( app_image == default ) {
                 c: 0 0 bg1
             } else {
-                display: none;
+                display: none
             }
             /// Remove image in fullscreen mode.
             if ( fullscreen == 1 ) { content: none i }
@@ -1257,7 +1257,7 @@ ac5 = var(--ac-5)
         [class *= 'message-'][data-id] {
             /// Exclude stickers.
             > span + div:not(.urabC) > div {
-                box-shadow: 0 1px 0 s('rgba(var(--shadow-rgb), 0.33)') i;
+                box-shadow: 0 1px 0 s('rgba(var(--shadow-rgb), 0.33)') i
             }
         }
 
