global: add borders to floating emoji picker

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1103,6 +1103,15 @@ ac5 = var(--ac-5)
                 rad: var(--r-menus) i
             }
         }
+
+        /// Floating emoji picker.
+        > span > ._2I2_W {
+            rad: var(--r-menus) i
+            > ._3G19M {
+                border: 1px solid bg5 i
+                rad: var(--r-menus) i
+            }
+        }
     }
 
     // Shared app styles.
