icons: add hover animations to main toolbars

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1112,6 +1112,18 @@ ac5 = var(--ac-5)
                 rad: var(--r-menus) i
             }
         }
+
+        /// Hover animation for icons.
+        #side > header,
+        #main > div + header,
+        #main > footer > .copyable-area {
+            button:not([data-animate-menu-icons-item]), [role = 'button'] {
+                [data-icon] { transition: fill-opacity 0.3s ease i }
+                &:not(._3QjfB):hover {
+                    [data-icon] { fill-opacity: 0.6 i }
+                }
+            }
+        }
     }
 
     // Shared app styles.
