--- a/wa.user.styl
+++ b/wa.user.styl
@@ -332,6 +332,8 @@ ac5 = var(--ac-5)
         }
 
         /// WA variables.
+        --gray-30: var(--bg-5) //#f7f7f7;
+        --gray-30-rgb: var(--bg-5-rgb) //247,247,247;
         --teal: var(--ac-0) //#009688;
         --teal-rgb: var(--ac-0-rgb) //0,150,136;
         --teal-light: var(--ac-1) //#1de9b6;
