vars: fix avatar border into a darker color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -364,8 +364,8 @@ ac5 = var(--ac-5)
         --audio-track-outgoing-rgb: var(--fg-4-rgb) //29,88,82;
         --avatar-background: var(--bg-1) //#101d24;
         --avatar-background-rgb: var(--bg-1-rgb) //16,29,36;
-        --avatar-border: var(--fg-3) //#a5aaad;
-        --avatar-border-rgb: var(--fg-3-rgb) //165,170,173;
+        --avatar-border: var(--bg-3) //#a5aaad;
+        --avatar-border-rgb: var(--bg-3-rgb) //165,170,173;
         --avatar-placeholder-background: var(--bg-5) //#6c7478;
         --avatar-placeholder-background-rgb: var(--bg-5-rgb) //108,116,120;
         --avatar-placeholder-primary: var(--fg-3) //#d6d8d9;
