--- a/wa.user.styl
+++ b/wa.user.styl
@@ -851,7 +851,7 @@ ac5 = var(--ac-5)
         /// Global -> Scrollbar styles.
         /\*{
             /// Feat -> Thin scrollbar in Firefox.
-            if ( ff_scroll == 1 ) {
+            if (ff_scroll) {
                 @supports (scrollbar-width: thin) {
                     scrollbar-width: thin i
                 }
@@ -1097,7 +1097,7 @@ ac5 = var(--ac-5)
                 display: none
             }
             /// Remove image in fullscreen mode.
-            if ( fullscreen == 1 ) { content: none i }
+            if (fullscreen) { content: none i }
         }
 
         /// Dropdowns -> Chat/Header.
@@ -1279,7 +1279,7 @@ ac5 = var(--ac-5)
             opacity: 1 i
 
             /// Feat -> Show chat image.
-            if ( chat_bg != 1 ) { display: none i }
+            if (!chat_bg) { display: none i }
         }
 
         /// Tweak text shadow.
@@ -1355,7 +1355,7 @@ ac5 = var(--ac-5)
     }
 
     // Feat -> Compact mode.
-    if ( app_c_m == 1 ) {
+    if (app_c_m) {
         /// Reset height/width if there is an overflow.
         #app > div > [tabindex] {
             @media screen and (max-height: 500px) { min-height: auto }
