icons: fix selected media color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1202,6 +1202,16 @@ ac5 = var(--ac-5)
         }
     }
 
+    // Global -> Icons.
+    span[class] {
+
+        /// Right -> Contact/group selected media drawer.
+        &[data-icon = 'checkbox-round-checked'] {
+            [fill = '#00BFA5'] { fill: ac0 }
+            [fill = '#FFF'] { fill: white }
+        }
+    }
+
     /// Feat -> Consistent drawer headers.
     if(app_c_h) {
         ._1fiOp, ._2TZYF {
